src/Utilities/Utilities.template.yml
Description: Misc tools for storage and simple networking
Parameters:
  MasterAccountId:
    Type: String
    Default: ""

  NetworkCidr:
    Type: String
    Description: Cidr to use for the VPC.
    Default: 10.1.0.0/16

  PrivateNetworkCidr:
    Type: String
    Description: Cidr to use for private networking within the VPC.
    Default: 10.127.0.0/16

  # DO NOT SET THIS MANUALLY
  # This value should only be controlled by CI/CD CodePipeline.
  # Setting this adds a route to the master account's VPC
  PeeringConnectionId:
    Type: String
    Description: Connection ID of the peering connection setup between master and agent accounts
    Default: ""

  MasterAccountCidr:
    Type: String
    Description: Master account cidr block. A route to the peering connection is setup with this range
    Default: 10.1.0.0/16

Conditions:
  # Master/Shared account - one that has control of "agent" accounts like (dev/staging/prod)
  IsMasterAccount: !Equals
    - !Ref MasterAccountId
    - ""

  # Agent account (dev/staging/prod)
  IsAgentAccount: !Not
    - !Equals
      - !Ref MasterAccountId
      - ""

  # Whether or not to vpc setup peering with the master account.
  SetupPeeringRoute: !Not
    - !Equals
      - !Ref PeeringConnectionId
      - ""

Resources:
  # Storage
  # -------------------------------------------
  # Store whatever you want in here, but it'll mostly be used for deployment templates and artifacts

  UtilityBucket:
    Type: AWS::S3::Bucket
    Properties:
      AccessControl: BucketOwnerFullControl

  # Networking
  # -------------------------------------------

  VPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: !Ref NetworkCidr
      EnableDnsSupport: true
      EnableDnsHostnames: true
  
  VPCFlowLogGroup:
    Type: AWS::Logs::LogGroup
    Properties:
      RetentionInDays: 14

  VPCFlowLogger:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Version: 2012-10-17
        Statement:
          - Effect: Allow
            Action: sts:AssumeRole
            Principal:
              Service: vpc-flow-logs.amazonaws.com

  VPCFlowLoggingPolicy:
    Type: AWS::IAM::ManagedPolicy
    Properties:
      Roles:
        - !Ref VPCFlowLogger
      PolicyDocument:
        Version: 2012-10-17
        Statement:
          - Effect: Allow
            Action:
              - logs:CreateLogStream
              - logs:PutLogEvents
              - logs:DescribeLogGroups
              - logs:DescribeLogStreams
            Resource: !GetAtt VPCFlowLogGroup.Arn

  VPCFlowLog:
    Type: AWS::EC2::FlowLog
    Properties:
      DeliverLogsPermissionArn: !GetAtt VPCFlowLogger.Arn
      LogGroupName: !Ref VPCFlowLogGroup
      ResourceId: !Ref VPC
      ResourceType: VPC
      TrafficType: REJECT

  Ipv6CidrBlock:
    Type: AWS::EC2::VPCCidrBlock
    Properties:
      AmazonProvidedIpv6CidrBlock: true
      VpcId: !Ref VPC

  InternetGateway:
    Type: AWS::EC2::InternetGateway

  InternetGatewayAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      InternetGatewayId: !Ref InternetGateway
      VpcId: !Ref VPC

  RouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC

  Ipv4PublicRoute:
    Type: AWS::EC2::Route
    DependsOn: InternetGatewayAttachment
    Properties:
      RouteTableId: !Ref RouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway

  Ipv6PublicRoute:
    Type: AWS::EC2::Route
    DependsOn: InternetGatewayAttachment
    Properties:
      RouteTableId: !Ref RouteTable
      DestinationIpv6CidrBlock: ::/0
      GatewayId: !Ref InternetGateway

  PeeringRoute:
    Type: AWS::EC2::Route
    Condition: SetupPeeringRoute
    Properties:
      DestinationCidrBlock: !Ref MasterAccountCidr
      RouteTableId: !Ref RouteTable
      VpcPeeringConnectionId: !Ref PeeringConnectionId

  Subnet1:
    Type: AWS::EC2::Subnet
    DependsOn: Ipv6CidrBlock
    Properties:
      CidrBlock: !Select [0, !Cidr [!GetAtt VPC.CidrBlock, 4, 14]]
      Ipv6CidrBlock:
        !Select [0, !Cidr [!Select [0, !GetAtt VPC.Ipv6CidrBlocks], 4, 64]]
      AvailabilityZone: !Select [0, !GetAZs us-east-1]
      VpcId: !Ref VPC
      MapPublicIpOnLaunch: true

  Subnet1RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref RouteTable
      SubnetId: !Ref Subnet1

  Subnet2:
    Type: AWS::EC2::Subnet
    DependsOn: Ipv6CidrBlock
    Properties:
      CidrBlock: !Select [1, !Cidr [!GetAtt VPC.CidrBlock, 4, 14]]
      Ipv6CidrBlock:
        !Select [1, !Cidr [!Select [0, !GetAtt VPC.Ipv6CidrBlocks], 4, 64]]
      AvailabilityZone: !Select [1, !GetAZs us-east-1]
      VpcId: !Ref VPC
      MapPublicIpOnLaunch: true

  Subnet2RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref RouteTable
      SubnetId: !Ref Subnet2

  Subnet3:
    Type: AWS::EC2::Subnet
    DependsOn: Ipv6CidrBlock
    Properties:
      CidrBlock: !Select [2, !Cidr [!GetAtt VPC.CidrBlock, 4, 14]]
      Ipv6CidrBlock:
        !Select [2, !Cidr [!Select [0, !GetAtt VPC.Ipv6CidrBlocks], 4, 64]]
      AvailabilityZone: !Select [2, !GetAZs us-east-1]
      VpcId: !Ref VPC
      MapPublicIpOnLaunch: true

  Subnet3RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref RouteTable
      SubnetId: !Ref Subnet3

  Subnet4:
    Type: AWS::EC2::Subnet
    DependsOn: Ipv6CidrBlock
    Properties:
      CidrBlock: !Select [3, !Cidr [!GetAtt VPC.CidrBlock, 4, 14]]
      Ipv6CidrBlock:
        !Select [3, !Cidr [!Select [0, !GetAtt VPC.Ipv6CidrBlocks], 4, 64]]
      AvailabilityZone: !Select [3, !GetAZs us-east-1]
      VpcId: !Ref VPC
      MapPublicIpOnLaunch: true

  Subnet4RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref RouteTable
      SubnetId: !Ref Subnet4

  DBSubnetGroup:
    Type: AWS::RDS::DBSubnetGroup
    Properties:
      DBSubnetGroupDescription: Database subnet group for the primary VPC
      SubnetIds:
        - !Ref Subnet1
        - !Ref Subnet2
        - !Ref Subnet3
        - !Ref Subnet4

  WebSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Security group for web ports 80 and 443
      SecurityGroupIngress:
        # Port 80 - HTTP
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIpv6: ::/0
        # Port 443 - HTTPS
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIpv6: ::/0
      VpcId: !Ref VPC

  EnvoySecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Security group for envoy
      VpcId: !Ref VPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 9901
          ToPort: 9901
          CidrIp: !Ref NetworkCidr
        - !If
          - IsMasterAccount
          - !Ref AWS::NoValue
          - IpProtocol: tcp
            FromPort: 9901
            ToPort: 9901
            CidrIp: 10.1.0.0/16
        - IpProtocol: tcp
          FromPort: 15000
          ToPort: 15000
          CidrIp: !Ref NetworkCidr
        - !If
          - IsMasterAccount
          - !Ref AWS::NoValue
          - IpProtocol: tcp
            FromPort: 15000
            ToPort: 15000
            CidrIp: 10.1.0.0/16
        - IpProtocol: tcp
          FromPort: 15001
          ToPort: 15001
          CidrIp: !Ref NetworkCidr
        - !If
          - IsMasterAccount
          - !Ref AWS::NoValue
          - IpProtocol: tcp
            FromPort: 15001
            ToPort: 15001
            CidrIp: 10.1.0.0/16

  DatabaseSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Security group for mysql/aurora
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 3306
          ToPort: 3306
          CidrIp: !Ref NetworkCidr
        - !If
          - IsMasterAccount
          - !Ref AWS::NoValue
          - IpProtocol: tcp
            FromPort: 3306
            ToPort: 3306
            CidrIp: 10.1.0.0/16
      VpcId: !Ref VPC

  # Private Networking
  # -------------------------------------------
  
  NatNetworkInterface:
    Type: AWS::EC2::NetworkInterface
    Properties:
      SourceDestCheck: false
      SubnetId: !Ref Subnet1
      GroupSet:
        - !Ref NatSecurityGroup

  NatSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Security group to allow traffic to the NAT instance.
      VpcId: !Ref VPC
      SecurityGroupIngress:
        - IpProtocol: -1
          FromPort: -1
          ToPort: -1
          CidrIp: !Ref PrivateNetworkCidr

  NatInstance:
    Type: AWS::EC2::Instance
    Properties:
      InstanceType: t4g.nano
      SourceDestCheck: false
      ImageId: ami-04dd965bdf8b07460
      NetworkInterfaces:
        - DeviceIndex: '0'
          NetworkInterfaceId: !Ref NatNetworkInterface
      Tags:
        - Key: Name
          Value: nat-instance
      UserData:
        Fn::Base64: |
          #!/bin/bash -xe
          sysctl -w net.ipv4.ip_forward=1
          /sbin/iptables -t nat -A POSTROUTING -o eth0 -j MASQUERADE
  
  PrivateVpcCidr:
    Type: AWS::EC2::VPCCidrBlock
    Properties:
      CidrBlock: !Ref PrivateNetworkCidr
      VpcId: !Ref VPC

  PrivateRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC

  PrivateNatRoute:
    Type: AWS::EC2::Route
    DependsOn: InternetGatewayAttachment
    Properties:
      RouteTableId: !Ref PrivateRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      NetworkInterfaceId: !Ref NatNetworkInterface

  PrivateSubnet1:
    Type: AWS::EC2::Subnet
    DependsOn: PrivateVpcCidr
    Properties:
      CidrBlock: !Select [0, !Cidr [!Ref PrivateNetworkCidr, 4, 14]]
      AvailabilityZone: !Select [0, !GetAZs us-east-1]
      VpcId: !Ref VPC

  PrivateSubnet1RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PrivateRouteTable
      SubnetId: !Ref PrivateSubnet1

  PrivateSubnet2:
    Type: AWS::EC2::Subnet
    DependsOn: PrivateVpcCidr
    Properties:
      CidrBlock: !Select [1, !Cidr [!Ref PrivateNetworkCidr, 4, 14]]
      AvailabilityZone: !Select [1, !GetAZs us-east-1]
      VpcId: !Ref VPC

  PrivateSubnet2RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PrivateRouteTable
      SubnetId: !Ref PrivateSubnet2

  PrivateSubnet3:
    Type: AWS::EC2::Subnet
    DependsOn: PrivateVpcCidr
    Properties:
      CidrBlock: !Select [2, !Cidr [!Ref PrivateNetworkCidr, 4, 14]]
      AvailabilityZone: !Select [2, !GetAZs us-east-1]
      VpcId: !Ref VPC

  PrivateSubnet3RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PrivateRouteTable
      SubnetId: !Ref PrivateSubnet3

  PrivateSubnet4:
    Type: AWS::EC2::Subnet
    DependsOn: PrivateVpcCidr
    Properties:
      CidrBlock: !Select [3, !Cidr [!Ref PrivateNetworkCidr, 4, 14]]
      AvailabilityZone: !Select [3, !GetAZs us-east-1]
      VpcId: !Ref VPC

  PrivateSubnet4RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PrivateRouteTable
      SubnetId: !Ref PrivateSubnet4

  # Security - Roles & Policies
  # -------------------------------------------

  MasterRole:
    Type: AWS::IAM::Role
    Condition: IsMasterAccount
    Properties:
      RoleName: Master
      ManagedPolicyArns:
        - arn:aws:iam::aws:policy/AdministratorAccess
      AssumeRolePolicyDocument:
        Version: 2012-10-17
        Statement:
          - Effect: Allow
            Action: sts:AssumeRole
            Principal:
              Service:
                - cloudformation.amazonaws.com
                - codepipeline.amazonaws.com
                - lambda.amazonaws.com
                - !Sub states.${AWS::Region}.amazonaws.com

  AgentRole:
    Type: AWS::IAM::Role
    Condition: IsAgentAccount
    Properties:
      RoleName: Agent
      ManagedPolicyArns:
        - arn:aws:iam::aws:policy/AdministratorAccess
      AssumeRolePolicyDocument:
        Version: 2012-10-17
        Statement:
          - Effect: Allow
            Action: sts:AssumeRole
            Principal:
              AWS: !Sub arn:aws:iam::${MasterAccountId}:role/Master
          - Effect: Allow
            Action: sts:AssumeRole
            Principal:
              Service:
                - cloudformation.amazonaws.com
                - codepipeline.amazonaws.com

  AdminRole:
    Type: AWS::IAM::Role
    Properties:
      RoleName: Admin
      ManagedPolicyArns:
        - arn:aws:iam::aws:policy/AdministratorAccess
      AssumeRolePolicyDocument:
        Version: 2012-10-17
        Statement:
          - Effect: Allow
            Action: sts:AssumeRole
            Principal:
              AWS: !GetAtt BrokerRole.Arn

  SpectatorRole:
    Type: AWS::IAM::Role
    Properties:
      RoleName: Spectator
      ManagedPolicyArns:
        - arn:aws:iam::aws:policy/ReadOnlyAccess
      AssumeRolePolicyDocument:
        Version: 2012-10-17
        Statement:
          - Effect: Allow
            Action: sts:AssumeRole
            Principal:
              AWS:
                - !If [
                    IsMasterAccount,
                    !GetAtt MasterRole.Arn,
                    !GetAtt AgentRole.Arn,
                  ]
                - !GetAtt BrokerRole.Arn

  BuilderRole:
    Type: AWS::IAM::Role
    Condition: IsMasterAccount
    Properties:
      RoleName: Builder
      ManagedPolicyArns:
        - arn:aws:iam::aws:policy/ReadOnlyAccess
        - arn:aws:iam::aws:policy/AWSCodeBuildAdminAccess
        - arn:aws:iam::aws:policy/AmazonS3FullAccess
        - arn:aws:iam::aws:policy/AmazonEC2ContainerRegistryPowerUser
        - arn:aws:iam::aws:policy/AmazonElasticContainerRegistryPublicPowerUser
        - arn:aws:iam::aws:policy/CloudWatchLogsFullAccess
        - !Ref AssumeRoleAccess
      AssumeRolePolicyDocument:
        Version: 2012-10-17
        Statement:
          - Effect: Allow
            Action: sts:AssumeRole
            Principal:
              Service: codebuild.amazonaws.com

  ServerlessPublisherRole:
    Type: AWS::IAM::Role
    Properties:
      RoleName: ServerlessPublisher
      ManagedPolicyArns:
        - !Ref ServerlessRepoPublisherAccess
      AssumeRolePolicyDocument:
        Version: 2012-10-17
        Statement:
          - Effect: Allow
            Action: sts:AssumeRole
            Principal:
              AWS: !If
                - IsMasterAccount
                - !GetAtt BuilderRole.Arn
                - !Sub arn:aws:iam::${MasterAccountId}:role/Builder

  BrokerRole:
    Type: AWS::IAM::Role
    Properties:
      RoleName: Broker
      ManagedPolicyArns:
        - arn:aws:iam::aws:policy/AWSLambdaExecute
        - !Ref AssumeRoleAccess
      AssumeRolePolicyDocument:
        Version: 2012-10-17
        Statement:
          - Effect: Allow
            Action: sts:AssumeRole
            Principal:
              Service: lambda.amazonaws.com
              AWS: !If
                - IsMasterAccount
                - !Ref AWS::NoValue
                - !Sub arn:aws:iam::${MasterAccountId}:role/Broker

  AssumeRoleAccess:
    Type: AWS::IAM::ManagedPolicy
    Properties:
      PolicyDocument:
        Version: 2012-10-17
        Statement:
          - Effect: Allow
            Action: sts:AssumeRole
            Resource: "*"

  ServerlessRepoPublisherAccess:
    Type: AWS::IAM::ManagedPolicy
    Properties:
      PolicyDocument:
        Version: 2012-10-17
        Statement:
          - Effect: Allow
            Action:
              - serverlessrepo:ListApplications
              - serverlessrepo:ListApplicationVersions
              - serverlessrepo:CreateApplication
              - serverlessrepo:GetApplication
              - serverlessrepo:CreateCloudFormationTemplate
              - serverlessrepo:CreateApplicationVersion
              - serverlessrepo:GetApplicationPolicy
              - serverlessrepo:SearchApplications
              - serverlessrepo:GetCloudFormationTemplate
              - serverlessrepo:UpdateApplication
              - serverlessrepo:UnshareApplication
              - serverlessrepo:ListApplicationDependencies
              - serverlessrepo:CreateCloudFormationChangeSet
              - serverlessrepo:PutApplicationPolicy
            Resource: "*"


  # Security - Encryption
  # -------------------------------------------

  SecretsKey:
    Type: AWS::KMS::Key
    Properties:
      EnableKeyRotation: true
      KeyPolicy:
        Version: 2012-10-17
        Statement:
          - Effect: Allow
            Action: kms:*
            Resource: "*"
            Principal:
              AWS: !If
                - IsMasterAccount
                - - !Sub arn:aws:iam::${AWS::AccountId}:root
                  - !GetAtt BuilderRole.Arn
                - - !Sub arn:aws:iam::${AWS::AccountId}:root
                  - !Sub arn:aws:iam::${MasterAccountId}:root
          - Effect: Allow
            Action: kms:Encrypt
            Resource: "*"
            Principal:
              AWS: !If
                - IsMasterAccount
                - !GetAtt SpectatorRole.Arn
                - - !GetAtt SpectatorRole.Arn
                  - !Sub arn:aws:iam::${MasterAccountId}:role/Spectator
                  - !Sub arn:aws:iam::${MasterAccountId}:role/Master

  SecretsKeyAlias:
    Type: AWS::KMS::Alias
    Properties:
      TargetKeyId: !GetAtt SecretsKey.Arn
      AliasName: alias/SecretsKey

  SecretsKeyEncryptPolicy:
    Type: AWS::IAM::ManagedPolicy
    Properties:
      ManagedPolicyName: SecretsKeyEncryptAccess
      PolicyDocument:
        Version: 2012-10-17
        Statement:
          - Effect: Allow
            Action:
              - kms:Encrypt
              - kms:ReEncrypt
            Resource: !GetAtt SecretsKey.Arn

  SecretsKeyDecryptPolicy:
    Type: AWS::IAM::ManagedPolicy
    Properties:
      ManagedPolicyName: SecretsKeyDecryptAccess
      PolicyDocument:
        Version: 2012-10-17
        Statement:
          - Effect: Allow
            Action:
              - kms:Decrypt
            Resource: !GetAtt SecretsKey.Arn

  ArtifactKey:
    Type: AWS::KMS::Key
    Condition: IsMasterAccount
    Properties:
      Description: Key used for encrypting/decrypting build artifacts
      KeyPolicy:
        Version: 2012-10-17
        Statement:
          - Effect: Allow
            Action: kms:*
            Resource: "*"
            Principal:
              AWS: !Ref AWS::AccountId
          - Effect: Allow
            Action:
              - kms:Encrypt
              - kms:Decrypt
              - kms:GenerateDataKey
            Resource: "*"
            Principal:
              AWS:
                - !GetAtt BuilderRole.Arn
                - !ImportValue cfn-metadata:DevAccountId
                - !ImportValue cfn-metadata:ProdAccountId

  ArtifactKeyAlias:
    Type: AWS::KMS::Alias
    Condition: IsMasterAccount
    Properties:
      TargetKeyId: !GetAtt ArtifactKey.Arn
      AliasName: alias/ArtifactKey

Outputs:
  UtilityBucketName:
    Description: Name of the utility bucket
    Value: !Ref UtilityBucket
    Export:
      Name: !Sub ${AWS::StackName}:UtilityBucketName

  VpcId:
    Description: ID of the VPC
    Value: !Ref VPC
    Export:
      Name: !Sub ${AWS::StackName}:VpcId

  SubnetIds:
    Description: Comma-delimited list of Subnet Ids
    Value: !Join
      - ","
      - - !Ref Subnet1
        - !Ref Subnet2
        - !Ref Subnet3
        - !Ref Subnet4
    Export:
      Name: !Sub ${AWS::StackName}:SubnetIds

  DBSubnetGroupName:
    Description: Name of the db subnet group for the primary VPC
    Value: !Ref DBSubnetGroup
    Export:
      Name: !Sub ${AWS::StackName}:DBSubnetGroupName

  DefaultSecurityGroupId:
    Description: Default security group ID for the primary VPC
    Value: !GetAtt VPC.DefaultSecurityGroup
    Export:
      Name: !Sub ${AWS::StackName}:DefaultSecurityGroupId

  WebSecurityGroupId:
    Description: Group ID for the public-web security group
    Value: !GetAtt WebSecurityGroup.GroupId
    Export:
      Name: !Sub ${AWS::StackName}:WebSecurityGroupId

  EnvoySecurityGroupId:
    Description: Group ID for the envoy security group
    Value: !GetAtt EnvoySecurityGroup.GroupId
    Export:
      Name: !Sub ${AWS::StackName}:EnvoySecurityGroupId

  DatabaseSecurityGroupId:
    Description: ID of the mysql/aurora security group
    Value: !GetAtt DatabaseSecurityGroup.GroupId
    Export:
      Name: !Sub ${AWS::StackName}:DatabaseSecurityGroupId

  RouteTableId:
    Description: ID of the vpc's route table
    Value: !Ref RouteTable
    Export:
      Name: !Sub ${AWS::StackName}:RouteTableId

  MasterAccountId:
    Description: ID of the master account
    Condition: IsAgentAccount
    Value: !Ref MasterAccountId
    Export:
      Name: !Sub ${AWS::StackName}:MasterAccountId

  MasterRoleArn:
    Description: ARN of the master role
    Condition: IsMasterAccount
    Value: !GetAtt MasterRole.Arn
    Export:
      Name: !Sub ${AWS::StackName}:MasterRoleArn

  AgentRoleArn:
    Description: ARN of the agent role
    Condition: IsAgentAccount
    Value: !GetAtt AgentRole.Arn
    Export:
      Name: !Sub ${AWS::StackName}:AgentRoleArn

  SpectatorRoleArn:
    Description: ARN of the spectator role
    Value: !GetAtt SpectatorRole.Arn
    Export:
      Name: !Sub ${AWS::StackName}:SpectatorRoleArn

  BuilderRoleArn:
    Description: ARN of the builder role
    Condition: IsMasterAccount
    Value: !GetAtt BuilderRole.Arn
    Export:
      Name: !Sub ${AWS::StackName}:BuilderRoleArn

  AdminRoleArn:
    Description: ARN of the admin role
    Value: !GetAtt AdminRole.Arn
    Export:
      Name: !Sub ${AWS::StackName}:AdminRoleArn

  ServerlessPublisherRoleArn:
    Description: ARN of the serverless publisher role
    Value: !GetAtt ServerlessPublisherRole.Arn
    Export:
      Name: !Sub ${AWS::StackName}:ServerlessPublisherRole

  BrokerRoleArn:
    Description: ARN of the broker role
    Value: !GetAtt BrokerRole.Arn
    Export:
      Name: !Sub ${AWS::StackName}:BrokerRoleArn

  SecretsKeyArn:
    Description: ARN of the secrets key alias
    Value: !Sub arn:aws:kms:${AWS::Region}:${AWS::AccountId}:${SecretsKeyAlias}
    Export:
      Name: !Sub ${AWS::StackName}:SecretsKeyArn

  SecretsKeyEncryptPolicyArn:
    Description: ARN of the key policy used for allowing secrets to be encrypted
    Value: !Ref SecretsKeyEncryptPolicy
    Export:
      Name: !Sub ${AWS::StackName}:SecretsKeyEncryptPolicyArn

  SecretsKeyDecryptPolicyArn:
    Description: ARN of the key policy used for allowing secrets to be decrypted
    Value: !Ref SecretsKeyDecryptPolicy
    Export:
      Name: !Sub ${AWS::StackName}:SecretsKeyDecryptPolicyArn

  ArtifactKeyArn:
    Description: ARN of the artifact key alias
    Condition: IsMasterAccount
    Value: !Sub arn:aws:kms:${AWS::Region}:${AWS::AccountId}:${ArtifactKeyAlias}
    Export:
      Name: !Sub ${AWS::StackName}:ArtifactKeyArn

  Ipv4NetworkCidr:
    Description: Ipv4 CIDR Range for the VPC
    Value: !Ref NetworkCidr
    Export:
      Name: !Sub ${AWS::StackName}:Ipv4NetworkCidr
